2014-11-02 Martin <tripiana@cern.ch>
	* Add preselection variables (configurable through jO).
	* Add OR requirements for signal leptons.
	* Add lepton isolation type config (j0). = Loose, Medium, Tight, None.
	* New (simplified) logic. Some code cleaning.
	* Remove DefinPt,DefinEta selections.
	* Fix data tagging/merging.
	* Fix TileTrip flag.
	* Fix store cleaning when leaving before the end.
	* Fix options parser.
	* Fix warning in GetTruthBosonPt() for zero-pt composite particle.
	* Add jOption to file metadata (TNamed jOption in hist file for now).

2014-10-30 Martin <tripiana@cern.ch>
	* Add options for systematics and output dir.
	* Add further instructions to README to run on the grid.
	* Add wrapper to run in batch. (overrides previous -b option).
	* Fix doOR requirement.
	* Fix PyAMI version in grid setup scripts.
	* Fix batch submission for multiple samples/systemtics. (no re-compiling now)

2014-10-28 Arely <arelycg@cern.ch>
	* Fix 'passOR' requirement should be "!doOR"
        * Fix the '-j' option in util/run.cxx
        * Add n_jets50

2014-10-28 Martin <tripiana@cern.ch>
	* Update GetMET call to latest SUSYTools implementation.
	* Fix jet 'passOR' requirement./
	* Add version flag (-v) to tag output files.

2014-10-27 Martin <tripiana@cern.ch>
	* Add options for max number of events and jOption.
	* Fix data paths for running in batch/grid mode.

2014-10-26 Martin <tripiana@cern.ch>
	* Fix passMCor (+ avoid zero-pt warnings)
	* Fix bad_alloc crash.
	* Tagging SusyAnalysis-00-00-05


2014-10-24 Martin <tripiana@cern.ch>
	* Add overlap removal option to jO.
	* Fix store cleaning when running in genPU mode.
	* Fix Stop and Monojet jOptions.

2014-10-21 Martin <tripiana@cern.ch>
	* Move to Base,2.0.14
	* New MET re-building in ST
	* Fix m_top
	* Add submit_batch script.

2014-10-20 Martin <tripiana@cern.ch>
	* Move to Base-2.0.13
	* Update to new ST decoration


2014-08-29 Martin <tripiana@cern.ch>
	* Move to Base-2.0.12